k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taki-deployment
  namespace: taki
  labels:
    app: taki-app
spec:
  revisionHistoryLimit: 1
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: taki-app
  template:
    metadata:
      labels:
        app: taki-app
    spec:
      containers:
        - name: taki-app
          image: jhshadi/my-apps
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 9000
          resources:
            requests:
              memory: "128M"
              cpu: "0m"
            limits:
              memory: "256M"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: http
            timeoutSeconds: 10
            failureThreshold: 3
#          readinessProbe:
#            httpGet:
#              path: /
#              port: http
          startupProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 30 # max of 5 min
      imagePullSecrets:
        - name: regcred
