k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: taki
  namespace: taki
  labels:
    app: taki-app
spec:
  type: ClusterIP
  ports:
    - port: 9000
      targetPort: 9000
  selector:
    app: taki-app
