k8/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-taki
  kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: taki.jhshadi.dev
      http:
        paths:
          - path: /
            backend:
              serviceName: taki-app
              servicePort: 9000
